# Logger

./: .gitignore  CMakeLists.txt  Generate.bat  Generate.sh  README.md  Test.cpp  cosconfig.json
QCOSLogger/: BoostLogWrapper.cpp  BoostLogWrapper.h  CMakeLists.txt  COSDownloader.cpp  COSDownloader.h  COSUploader.cpp  COSUploader.h  DownloaderBase.h  FakeDownloader.cpp  FakeDownloader.h  FakeUploader.cpp  FakeUploader.h  LogDownloader.cpp  LogDownloader.h  LogFile.h  LogFileMonitor.cpp  LogFileMonitor.h  LogMonitor.cpp  LogMonitor.h  LogRecorder.cpp  LogRecorder.h  LogThread.cpp  LogThread.h  LogUploader.cpp  LogUploader.h  QCOSLogger.cpp  QCOSLogger.h  UploaderBase.h
